@startuml


class WatchStatisticsUI{  
  
}

class WatchStatisticsController{
  +getFreelancers()
  }

class ApplicationPOT{
  +getInstance()
  +getPlatform()
  +getFacadeAuthorization()
  }

class Platform {
  +getST()
  +getrOrg()
  }

class UserSession {
  +getUserEmail()
  }

class RegisterOrganization{
  +getlOrg()
  }

class Organization {
  -String nome
  -String email
  -String NIF
  }



class FacadeAuthorization {  
  +getUserSession()
}



WatchStatisticsUI ..> WatchStatisticsController

WatchStatisticsController ..> ApplicationPOT
WatchStatisticsController ..> Platform
WatchStatisticsController ..> UserSession
WatchStatisticsController ..> RegisterOrganization
WatchStatisticsController ..> Organization
WatchStatisticsController ..> FacadeAuthorization

ApplicationPOT  ..> Platform
ApplicationPOT  ..> FacadeAuthorization

FacadeAuthorization "1"-- "1" UserSession: has


Platform "1" -- "1" RegisterOrganization : has

RegisterOrganization "1" -- "1..*" Organization : has








@enduml